--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,44 @@
+html,
+body {
+  display: flex;
+  background-image: url("../img/9L1l4W.jpg");
+  height: 100%;
+  width: 100%;
+  align-items: center;
+  justify-content: center;
+  font-family: "Open Sans Condensed", sans-serif;
+}
+
+.card.is-wide {
+  width: 550px;
+}
+
+.card-header,
+.card-content,
+.card-footer {
+  justify-content: center;
+  align-items: center;
+}
+h1 {
+  font-size: 1.75rem;
+  font-weight: bold;
+  font-family: "Saira", sans-serif;
+}
+
+.card-header {
+  padding: 1.75rem 0;
+}
+
+.card-content {
+  padding: 3.5rem 0;
+}
+
 form.signup,
 form.login {
   margin-top: 50px;
+}
+
+/* for moblie responsiveness */
+@media screen and (max-width: 1024px) {
+  /* Specific to this particular image */
 }
