added a few cards to itinerary page

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -26,6 +26,11 @@ textarea {
   background-color: thistle;
 }
 
+.card-subhead {
+  color: midnightblue;
+  font-weight: bold;
+}
+
 .create-your-own {
   font-family: "Cardo", serif;
 }
